--- a/style.css
+++ b/style.css
@@ -1,108 +1,152 @@
 * {
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-    margin: 0;
-    padding: 0;
-  }
-  
-  body {
-    background-color: #f7f3ee;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-  }
-  
-  .container {
-    max-width: 900px;
-    text-align: center;
-    padding: 20px;
-  }
-  
-  h1 {
-    font-size: 2em;
-    font-weight: 600;
-  }
-  
-  .upload-box {
-    border: 2px dashed #bbb;
-    padding: 20px;
-    margin: 20px 0;
-    border-radius: 10px;
-    cursor: pointer;
-  }
-  
-  .upload-box p {
-    color: #666;
-    font-weight: 600;
-  }
-  
-  .primary-result {
-    background-color: #f3e0d2;
-    padding: 10px;
-    border-radius: 8px;
-    text-align: left;
-    margin-bottom: 20px;
-  }
-  
-  .result-image {
-    width: 177px;
-    height: 177px;
-    border-radius: 5px;
-  }
-  
-  .classes-list ul {
-    list-style: none;
-    padding-left: 0;
-  }
-  
-  .classes-list li {
-    display: flex;
-    align-items: center;
-    background-color: #fff;
-    margin-bottom: 5px;
-    border-radius: 8px;
-  }
-  
-  .classes-list img {
-    max-width: 50px;
-    margin-right: 10px;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-  }
-  
-  .footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 20px;
-  }
-  
-  .group-info {
-    background-color: #c6e8dc;
-    padding: 10px;
-    border-radius: 8px;
-    font-size: 0.9em;
-  }
-  
-  .button-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 45px;
-  }
-  
-  .classify-button {
-    background-color: #d3aaf5;
-    border: none;
-    padding: 10px 20px;
-    color: white;
-    font-size: 1em;
-    border-radius: 8px;
-    cursor: pointer;
-  }
-  
-  .fa-upload, .fa-redo {
-    margin-right: 8px;
-  }
-  
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: #f7f3ee;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+
+.container {
+  max-width: 900px;
+  text-align: center;
+  padding: 20px;
+}
+
+h1 {
+  font-size: 2em;
+  font-weight: 600;
+}
+
+.upload-box {
+  border: 2px dashed #bbb;
+  padding: 20px;
+  margin: 20px 0;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.upload-box p {
+  color: #666;
+  font-weight: 600;
+}
+
+.primary-result {
+  background-color: #f3e0d2;
+  padding: 10px;
+  border-radius: 8px;
+  text-align: left;
+  margin-bottom: 20px;
+}
+
+.result-image {
+  width: 177px;
+  height: 177px;
+  border-radius: 5px;
+  margin: 0 auto;
+}
+
+.classes-list ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+.classes-list li {
+  display: flex;
+  align-items: center;
+  background-color: #fff;
+  margin-bottom: 5px;
+  border-radius: 8px;
+}
+
+.classes-list img {
+  max-width: 50px;
+  margin-right: 10px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.group-info {
+  background-color: #c6e8dc;
+  padding: 10px;
+  border-radius: 8px;
+  font-size: 0.9em;
+}
+
+.button-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 45px;
+}
+
+.classify-button {
+  background-color: #d3aaf5;
+  border: none;
+  padding: 10px 20px;
+  color: white;
+  font-size: 1em;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.fa-upload, .fa-redo {
+  margin-right: 8px;
+}
+
+.progress-container {
+  margin-bottom: 20px;
+}
+
+.progress {
+  background-color: #edd4c2; 
+  border-radius: 5px;
+  overflow: hidden;
+  height: 25px;
+  position: relative;
+}
+.progress-bar {
+  background-color: #ac7746;
+  height: 100%;
+  text-align: center;
+  line-height: 25px;
+  white-space: nowrap;
+  color: #ffffff;
+  transition: width 0.6s ease;
+}
+
+.class-label {
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.primary-result .progress {
+  background-color: #edd4c2 !important; 
+  border-radius: 5px;
+  overflow: hidden;
+  height: 25px;
+  position: relative;
+}
+
+.primary-result .progress-bar {
+  background-color: #ac7746 !important; 
+  height: 100%;
+  text-align: center;
+  line-height: 25px;
+  white-space: nowrap;
+  color: #ffffff !important;
+  transition: width 0.6s ease;
+}
